			* Draw a legend item for every dataset in the box plot
	* [spreadsheet]
		* Use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
		* Heatmap formatting for categorical data in text columns
		* When generating random numbers, allow to specify the seed number
		* Show column statistics also for text columns
		* Dropping and masking of values also for text and datetime columns
		* Data sampling (random and periodic methods)
		* Data 'flattening' - convert pivoted data to column base format
		* Column statistics (size, mean, stddev, etc.) are available in the function dialog
		* Function values dialog supports accessing arbitrary cells of columns with cell(f(index), g(column,..)) and other moving functions
		* Allow to subtract and add a value by providing a difference between two values
	* [matrix]
		* Zooming in the image view
	* [import]
		* Import data from Excel .xlsx files using QXlsx library
		* HDF5: support VLEN data import
		* Live data: support multiple values via TCP
	* [export]
		* Use the current working project directory, if available, as the default export path
	* [analysis]
		* Maximum Likelyhood estimation for several distributions
		* Guess start values of fit parameter for polynomial models by linear regression
		* Allow to create a spreadsheet with the data steming from the result of the computation
		* Implement fourier filtering for datetimes
	* [general]
		* Add settings option for GUM compliant terms

Performance improvements:
	* Reduce the memory consumption during the spreadsheet export to Sqlite
	* Reduce the memory consumption when importing from a database table into the spreadsheet
	* Faster import of files with a big number of columns
	* Faster creation of a big number of columns in the spreadsheet

Bug fixes:
	* [worksheet]
		* don't crash when undoing the step "add info element".