@@ -17,7 +17,8 @@ New features:
 		* Use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
 		* Heatmap formatting for categorical data in text columns
 		* When generating random numbers, allow to specify the seed number
-		* Show column statistics also for text columns
+		* Column statistics for text columns
+		* Column statistics for selected cells only
 		* Dropping and masking of values also for text and datetime columns
 		* Data sampling (random and periodic methods)
 		* Data 'flattening' - convert pivoted data to column base format
